lab/console/internal/deployment.yaml
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  name: console-internal
  labels:
    owner: tonyhhyip
    app: console
    usage: internal
spec:
  selector:
    matchLabels:
      owner: tonyhhyip
      app: console
      usage: internal
  template:
    metadata:
      labels:
        owner: tonyhhyip
        app: console
        usage: internal
    spec:
      containers:
        - name: console
          image: ysitd/cloud-console:1.0-dev
          imagePullPolicy: Always
          readinessProbe:
            tcpSocket:
              port: http
            timeoutSeconds: 1
          ports:
            - containerPort: 80
              name: http
